; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_r600.c_rv6xx_get_temp.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_r600.c_rv6xx_get_temp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }

@CG_THERMAL_STATUS = common dso_local global i32 0, align 4
@ASIC_T_MASK = common dso_local global i32 0, align 4
@ASIC_T_SHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rv6xx_get_temp(%struct.radeon_device* %0) #0 {
  %2 = alloca %struct.radeon_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %2, align 8
  %5 = load i32, i32* @CG_THERMAL_STATUS, align 4
  %6 = call i32 @RREG32(i32 %5)
  %7 = load i32, i32* @ASIC_T_MASK, align 4
  %8 = and i32 %6, %7
  %9 = load i32, i32* @ASIC_T_SHIFT, align 4
  %10 = ashr i32 %8, %9
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = and i32 %11, 255
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %3, align 4
  %14 = and i32 %13, 256
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %1
  %17 = load i32, i32* %4, align 4
  %18 = sub nsw i32 %17, 256
  store i32 %18, i32* %4, align 4
  br label %19

19:                                               ; preds = %16, %1
  %20 = load i32, i32* %4, align 4
  %21 = mul nsw i32 %20, 1000
  ret i32 %21
}

declare dso_local i32 @RREG32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
